RESOLVED FIXED204572
REGRESSION(r252770): [GTK][WPE] Remote inspector no longer works if debugger is in a different kind of system
https://bugs.webkit.org/show_bug.cgi?id=204572
Summary REGRESSION(r252770): [GTK][WPE] Remote inspector no longer works if debugger ...
Carlos Garcia Campos
Reported 2019-11-25 04:56:48 PST
We need to send the byte order as part of the message and avoid using size_t to store the size.
Attachments
Patch (7.78 KB, patch)
2019-11-25 05:02 PST, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2019-11-25 05:02:16 PST
Carlos Garcia Campos
Comment 2 2019-11-25 06:33:20 PST
Note You need to log in before you can comment on or make changes to this bug.